...
                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                </collectionViewFlowLayout>
                                <cells/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="coll--main"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="eE5-o6-z9p"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="jn7-An-0Es"/>
                                </connections>
                            </collectionView>
...
                                <constraints>
                                    <constraint firstAttribute="width" constant="30" id="Koz-o1-OGk"/>
                                    <constraint firstAttribute="height" constant="30" id="ZAB-Xa-mWB"/>
                                </constraints>
                                <state key="normal" image="close"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="btn--close"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="closeAction:" destination="OsZ-d6-d8x" eventType="touchUpInside" id="HQV-0s-hAS"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QQY-UY-OdS">
...
                                    <constraint firstAttribute="height" constant="30" id="5BD-do-izi"/>
                                    <constraint firstAttribute="width" constant="30" id="qxm-TL-VvT"/>
                                </constraints>
                                <state key="normal" image="like"/>
                                <state key="selected" image="liked"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="btn--like"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="btnAction:" destination="OsZ-d6-d8x" eventType="touchUpInside" id="v7v-BS-LKH"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82T-72-zvp">
...
